<resources>
    <string name="app_name">CodeChallenge3</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Select Gender</string>
    <string name="age">Age</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>