<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.main.MainActivity">

    <data>
        <variable
            name="viewModel"
            type="com.heroapps.codechallenge3.presentation.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent=".85">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/full_name">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout_mobile_number"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_full_name"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_full_name"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_full_name"
            app:layout_constraintWidth_percent=".85">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_mobile_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout_date_of_birth"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_email"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_email"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email"
            app:layout_constraintWidth_percent=".85">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mobile_number">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_date_of_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout_age"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_mobile_number"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_mobile_number"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_mobile_number"
            app:layout_constraintWidth_percent=".85">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:hint="@string/date_of_birth"
                android:inputType="date">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_date_of_birth"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_date_of_birth"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_date_of_birth"
            app:layout_constraintWidth_percent=".85">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:hint="@string/age">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/button_submit"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_age"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_age"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_age">

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:entries="@array/genders"
                android:minHeight="48dp"
                android:outlineProvider="none"
                android:prompt="@string/gender"
                android:spinnerMode="dialog"
                android:textAlignment="textStart"
                app:layout_constraintWidth_percent=".85" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintWidth_percent=".85" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

